--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,6 @@
   "rules": {
     "quotes": ["error", "single", { "allowTemplateLiterals": true }],
     "semi": ["error", "always"]
-  }
+  },
+  "ignorePatterns": [".eslintignore"]
 }
