--- a/package.json
+++ b/package.json
@@ -19,11 +19,12 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "clsx": "^2.0.0",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
+    "husky": "^8.0.0",
     "postcss": "^8",
     "tailwindcss": "^3",
-    "typescript": "^5",
-    "husky": "^8.0.0"
+    "typescript": "^5"
   }
 }
